Fixed many inspections across the project